# ElDorito

./: .gitignore  7z_Eldewrito_Config.txt  7zsd.sfx  BlamTypes.h  CMakeLists.txt  CefProcess.vcxproj  CommandMap.cpp  CommandMap.h  ElDorito.cpp  ElDorito.def  ElDorito.h  ElDorito.rc  ElDorito.sln  ElDorito.vcxproj  ElDorito.vcxproj.filters  ElMacros.h  ElModules.cpp  ElModules.h  ElPatches.cpp  ElPatches.h  ElPreferences.cpp  ElPreferences.h  HexConstants.cpp  HexConstants.h  Hooks.cpp  Hooks.h  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  Patch.cpp  Patch.h  Pointer.cpp  Pointer.h  Precompile.cpp  Precompile.h  Project20.sln  README.md  Singleton.h  StringUtils.cpp  StringUtils.h  Voting.json  (+9 more)
.github/: PULL_REQUEST_TEMPLATE.md
Blam/: BitStream.cpp  BitStream.h
CefProcess/: CefProcess.vcxproj
CefProcess/Source/: App.cpp  App.hpp  main.cpp
Console/: Console.cpp  Console.h  DirectXHook.cpp  DirectXHook.h  GameConsole.cpp  GameConsole.h  IRCBackend.cpp  IRCBackend.h  KeyboardHook.cpp  KeyboardHook.h
DLL/: Benchmark.cpp  Benchmark.h  Codefinder.h  DLL.vcxproj.filters  DebugHelper.h  Direct3D.h  EnginePointers.h  EventSubscriber.cpp  EventSubscriber.h  Events.h  InitHooks.h  OpticAnimation.cpp  OpticBezier.cpp  OpticException.h  OpticLua.cpp  OpticMedal.cpp  OpticMedal.h  OpticPack.cpp  OpticRender.cpp  OpticRender.h  Patcher.cpp  Shared.cpp  codefinder.cpp  main.cpp
DLL/xde/: FILE_ID.DIZ  xde.c  xde.txt
DLL/xzip/: About.cpp  About.h  Clipboard.cpp  StdAfx.cpp  StdAfx.h  XHyperLink.h  app.manifest  xtrace.h
ElDorito/: ElDorito.vcxproj  ElDorito.vcxproj.filters
ElDorito/Source/: CommandMap.cpp  CommandMap.hpp  DirectXHook.cpp  ElDorito.cpp  ElDorito.hpp  ElDorito.rc  ElModules.cpp  ElModules.hpp  ElPatches.cpp  Patch.cpp  Patch.hpp  Pointer.hpp  Settings.hpp  main.cpp
Modules/: Ammo.cpp  Ammo.h  Camera.cpp  Camera.h  Countdown.cpp  Countdown.h  Crosshair.cpp  Crosshair.h  DebugLogging.cpp  DebugLogging.h  DirectConnect.cpp  DirectConnect.h  Disclaimer.cpp  Disclaimer.h  ElModule.h  Fov.cpp  Fov.h  Fps.cpp  Fps.h  GameOptions.cpp  GameOptions.h  Globals.cpp  Globals.h  Godmode.cpp  Godmode.h  Hud.cpp  Hud.h  Information.cpp  Information.h  LoadLevel.cpp  LoadLevel.h  ModuleBase.cpp  ModuleBase.h  ModuleCamera.cpp  ModuleCamera.h  ModuleGame.cpp  ModuleGame.h  ModuleInput.cpp  ModuleInput.h  ModulePlayer.cpp  (+17 more)
Patches/: Armor.cpp  Armor.h  ContentItems.cpp  Core.cpp  Logging.cpp  Mouse.cpp  Mouse.h  Network.cpp  Network.h  PlayerUid.cpp  PlayerUid.h  RawInput.h  RawInputPatch.cpp  Scoreboard.cpp  Ui.cpp  Ui.h  VirtualKeyboard.cpp
Utils/: Assert.cpp  Assert.h  Cryptography.cpp  Cryptography.h  Macros.h  Singleton.h  String.cpp  String.h  Utils.h  VersionInfo.cpp  VersionInfo.h
artifact_extras/: cef.pak  cef_100_percent.pak  cef_200_percent.pak
artifact_extras/locales/: am.pak  ar.pak  bg.pak  bn.pak  ca.pak  cs.pak  da.pak  de.pak  el.pak  en-GB.pak  en-US.pak  es-419.pak  es.pak  et.pak  fa.pak  fi.pak  fil.pak  fr.pak  gu.pak  he.pak  hi.pak  hr.pak  hu.pak  id.pak  it.pak  ja.pak  kn.pak  ko.pak  lt.pak  lv.pak  ml.pak  mr.pak  ms.pak  nb.pak  nl.pak  pl.pak  pt-BR.pak  pt-PT.pak  ro.pak  ru.pak  (+13 more)
docs/: todo-0.5.0.txt
libs/MedalJunk/: Benchmark.h  CMakeLists.txt  Codefinder.h  Direct3D.h  EnginePointers.h  EventDispatcher.cpp  EventDispatcher.h  HookTest.cpp  HookTest.h  InitHooks.cpp  InitHooks.h  Optic.cpp  Optic.h  OpticAPI.cpp  OpticBezier.h  OpticEventHandler.cpp  OpticEventHandler.h  OpticException.h  OpticLua.h  OpticMedal.h  OpticMisc.cpp  OpticMisc.h  OpticPack.cpp  OpticPack.h  OpticRender.h  PatchGroup.cpp  Patcher.cpp  Shared.cpp  Shared.h  libzplay.h
libs/MedalJunk/xde/: xde.c  xde.h  xde.txt  xde_text.c  xdetbl.c
libs/MedalJunk/xzip/: About.cpp  About.h  Clipboard.cpp  StdAfx.cpp  StdAfx.h  XListBox.cpp  XListBox.h  XZipTestDlg.cpp  XZipTestDlg.h
libs/libzplay/: CMakeLists.txt  License.txt  README.txt
libs/libzplay/decoders/faac/: CMakeLists.txt
libs/libzplay/decoders/faac/libfaac/: frame.h
libs/libzplay/decoders/faad/: CMakeLists.txt
libs/libzplay/decoders/faad/libfaad/: common.h  decoder.c
libs/libzplay/decoders/lame/: CMakeLists.txt
libs/libzplay/decoders/lame/libmp3lame/: libmp3lame_vc6.vcproj  libmp3lame_vc6.vcxproj.filters
libs/libzplay/decoders/libmad/: CMakeLists.txt  config.h  frame.h  layer3.c
libs/libzplay/decoders/libogg/: CMakeLists.txt
libs/libzplay/decoders/libogg/include/ogg/: ogg.h
libs/libzplay/decoders/libvorbis/: CMakeLists.txt
libs/libzplay/decoders/libvorbis/include/vorbis/: codec.h
libs/libzplay/decoders/libvorbis/lib/: bitrate.c  codebook.c  floor0.c  floor1.c  mapping0.c  os.h  res0.c  sharedbook.c  vorbisfile.c
libs/libzplay/decoders/soundtouch/: CMakeLists.txt
libs/libzplay/decoders/soundtouch/include/: FIFOSampleBuffer.h  FIFOSamplePipe.h  SoundTouch.h
libs/libzplay/decoders/soundtouch/source/SoundTouch/: FIFOSampleBuffer.cpp  FIRFilter.h  RateTransposer.cpp  SoundTouch.dsp  SoundTouch.vcproj  SoundTouch.vcxproj  sse_optimized.cpp
libs/libzplay/include/: libzplay.h
libs/libzplay/license/: SoundTouch.txt  libmp3lame.txt
libs/libzplay/src/: config.h  debug.h  libzplay.cpp  two_soundcards.cpp  waudioprocessor.cpp  waudioprocessor.h  wcentercutprocessor.h  wdecoder.h  wechoprocessor.cpp  wfft.cpp  wfft.h  wmp3decoder.h  wmp3x.cpp  wmp3x.h  wqueue.h  wstprocessor.cpp  wstprocessor.h  wtags.h  wtools.cpp  wwavein.h  wwavelet.cpp  wwavelet.h
libs/lua-5.3.0/: CMakeLists.txt
libs/openssl-1.0.2c/: readme.txt
src/: BlamTypes.h  CommandMap.cpp  CommandMap.h  CommandMap.hpp  Console.cpp  Console.hpp  DirectXHook.cpp  DirectXHook.hpp  ElDorito.aps  ElDorito.cpp  ElDorito.hpp  ElDorito.rc  ElModules.cpp  ElModules.hpp  ElPatches.cpp  ForgeSavingDialog.rc  KeyboardHook.cpp  KeyboardHook.hpp  Menu.cpp  Menu.hpp  Patch.h  Pointer.cpp  Pointer.hpp  main.cpp  resource.h
src/Blam/: BitStream.cpp  BitStream.h  BitStream.hpp  BlamData.cpp  BlamData.hpp  BlamInput.cpp  BlamInput.hpp  BlamMemory.hpp  BlamNetwork.cpp  BlamNetwork.hpp  BlamObjects.hpp  BlamPlayers.cpp  BlamPlayers.hpp  (+1 more)
(+823 files in other folders)
